#####################
Nagios 3.x Change Log
#####################

3.4.4 - xx/xx/xxxx
------------------
* Fixed bug #401: segmentation fault on Solaris when parsing unknown timeperiod directives. (Eric Stanley)
* Added NULL pointer checks to CGI code. (Eric Stanley)
* Fixed buffer overflow vulnerability in CGI code. Thanks to Neohapsis (http://archives.neohapsis.com/archives/fulldisclosure/2012-12/0108.html) for finding this. (Eric Stanley)

3.4.3 - 11/30/2012
------------------
* Reverted squeue changes intended for Nagios 4
* Reapplied all patches from 3.4.2 release
* Applied fix for pagination and sorting on status.cgi #381 (Phil Randal)

3.4.2 - 11/09/2012
------------------
FIXES
* Fixed issue where deleting a downtime could cause Nagios to crash (Eric Stanley)
* Corrected logic so that end times for flexible downtimes are calculated from the downtime start rather than the current time in the case where Nagios is restarted (Eric Stanley)
* Fixed issue introduced by fix for bug #124 where flexible downtimes are not taken into account on Nagios restart. (Scott Wilkerson, Eric Stanley)
* Fixed bug #247: If a service reports no performance data, the perfdata log file has no line indicating the test. (omnikron@free.fr)
* Fixed link for unhandled unreachable host problems on tactical overview page (Rudolf Cejka)
* Fixed bug #345 with wild card searches not paging properly on status.cgi (Phil Randal)
* Fixed bug #343 on status.cgi where Service Group Summary can potentially show wrong totals (Mark Ziesemer)
* Fixed memory leaks on SIGHUP (Carlos Velasco)

3.4.1 - 05/11/2012
------------------
FIXES
* Double quotes in check_command definition break functionality (#332, reverts #86)


3.4.0 - 05/04/2012
------------------
ENHANCEMENTS
* Added service_check_timeout_state configuration variable (Bill McGonigle)
* Permanently remove sleep on run_event == FALSE in main loop (Max <perldork@webwizarddesign.com>)